--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chroma-js": "^2.4.2",
     "next": "12.1.4",
     "react": "18.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.0.0",
     "react-sortable-hoc": "^2.0.0"
   },
