--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chroma-js": "^2.4.2",
+    "emoji-mart": "^3.0.1",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-color": "^2.19.3",
