--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-color": "^2.19.3",
     "react-datepicker": "^4.7.0",
     "react-dom": "18.0.0",
-    "react-sortable-hoc": "^2.0.0"
+    "react-sortable-hoc": "^2.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.12.0",
