--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.33.3",
     "chroma-js": "^2.4.2",
     "emoji-mart": "^3.0.1",
+    "install": "^0.13.0",
     "next": "12.1.4",
+    "npm": "^8.6.0",
     "react": "18.0.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.7.0",
